@@ -16,4 +16,5 @@ BUGFIXES FROM BUGZILLA:
 006 ==> 388320 - Selecting print layout does not stay selected.
 007 ==> 389246 - Single click confirmation of suggested face tag.
 008 ==> 389208 - Request addition of "Lens" to Tool-Tips (Icon Items).
-009 ==> 
+009 ==> 389342 - Tags are copied although moving of file fails because file with the same name already exists in target location.
+010 ==> 
